<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_behavior_tree</name>
  <version>0.1.0</version>
  <description>A library that provides ROS2-specific Behavior Tree nodes, some generic nodes, and a simple wrapper for the BT 3.0 Behavior Tree class</description>
  <maintainer email="michael.jeronimo@intel.com">Michael Jeronimo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>behaviortree_cpp_v3</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>ros2_behavior_tree_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>nav2_msgs</depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
